<resources>
    <string name="app_name">Thesaurus App</string>
    <string name="enter_values">Enter Values</string>
    <string name="find_synonym">Find Synonym</string>
    <string name="word">Word</string>
    <string name="synonym">Synonym</string>
    <string name="submit">Submit</string>
    <string name="enter_values_title">Enter a word and its synonym</string>
    <string name="emptyString" />
    <string name="emptySting2" />
    <string name="emptyString2" />
    <string name="resultsWord">Your word: </string>
    <string name="resultsSynonym">Synonym: </string>
    <string name="welcomeWord">Enter a word</string>
</resources>
